--- a/app/src/main/res/layout/activity_detail__show.xml
+++ b/app/src/main/res/layout/activity_detail__show.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Detail_Show_For_New_Patient">
+        tools:context=".Detail_Show_For_New_Patient"
+        android:background="@drawable/p2">
 
     <TextView
             android:text="เบอร์ติดต่อผู้ดูแล :"
@@ -25,9 +26,9 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.254" android:textColor="#000000"
+            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.215" android:textColor="#000000"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.581"/>
+            app:layout_constraintVertical_bias="0.606"/>
     <TextView
             android:text="ชื่อ นามสกุล ผู้ดูแล :"
             android:layout_width="180dp"
@@ -48,9 +49,9 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.213" android:textColor="#000000"
+            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.18" android:textColor="#000000"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.529"/>
+            app:layout_constraintVertical_bias="0.545"/>
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_height="150dp"
             android:layout_width="150dp"
@@ -79,13 +80,13 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.242" android:textColor="#000000"
+            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.194" android:textColor="#000000"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.397"/>
+            app:layout_constraintVertical_bias="0.396"/>
     <TextView
             android:text="ที่อยู่ :"
-            android:layout_width="171dp"
-            android:layout_height="45dp"
+            android:layout_width="206dp"
+            android:layout_height="48dp"
             android:id="@+id/add_detail" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView20"
@@ -100,7 +101,7 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.187" android:textColor="#000000"
+            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.158" android:textColor="#000000"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.457"/>
     <TextView
@@ -111,7 +112,7 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.247" android:textColor="#000000"
+            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.186" android:textColor="#000000"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.271"/>
     <TextView
@@ -125,7 +126,7 @@
             android:textSize="18sp" android:textColor="#000000"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.199" app:layout_constraintVertical_bias="0.33"/>
+            app:layout_constraintHorizontal_bias="0.161" app:layout_constraintVertical_bias="0.33"/>
     <TextView
             android:text="อายุ :"
             android:layout_width="54dp"
@@ -135,9 +136,9 @@
             android:textSize="18sp" android:textColor="#000000"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/gender_D"
-            app:layout_constraintVertical_bias="0.008"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/gender_D" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.064" app:layout_constraintTop_toTopOf="@+id/gender_D"/>
+            app:layout_constraintHorizontal_bias="0.2" app:layout_constraintTop_toTopOf="@+id/gender_D"/>
     <TextView
             android:text="อายุ :"
             android:layout_width="54dp"
@@ -168,7 +169,7 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/name_detail"
-            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.0" android:textColor="#000000"
+            android:textSize="18sp" app:layout_constraintHorizontal_bias="0.186" android:textColor="#000000"
             app:layout_constraintStart_toEndOf="@+id/name_detail"
             app:layout_constraintTop_toTopOf="@+id/name_detail" app:layout_constraintVertical_bias="0.0"
     />
@@ -191,8 +192,8 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.913" android:textSize="18sp"
-            app:layout_constraintHorizontal_bias="0.502"/>
+            app:layout_constraintVertical_bias="0.962" android:textSize="18sp"
+            app:layout_constraintHorizontal_bias="0.507" android:background="@drawable/but9"/>
     <TextView
             android:text="ผู้ป่วยอยู่ในสภาวะ :"
             android:layout_width="150dp"
@@ -200,10 +201,10 @@
             android:id="@+id/textView2"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.179"
+            app:layout_constraintHorizontal_bias="0.224"
             android:textSize="18sp" android:textColor="#000000" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.651"/>
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.679"/>
     <TextView
             android:text="ผู้ป่วยอยู่ในสภาวะ"
             android:layout_width="90dp"
@@ -218,13 +219,12 @@
             app:layout_constraintVertical_bias="0.693"/>
     <TextView
             android:text="รายละเอียดสภาวะ :"
-            android:layout_width="185dp"
-            android:layout_height="67dp"
+            android:layout_width="142dp"
+            android:layout_height="83dp"
             android:id="@+id/detail_status" app:layout_constraintTop_toTopOf="@+id/textView9"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/textView9"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.838" app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.838"
             android:textSize="18sp" android:textColor="#000000"/>
     <TextView
             android:text="รายละเอียดสภาวะ :"
@@ -234,7 +234,7 @@
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.106" app:layout_constraintVertical_bias="0.726"
+            app:layout_constraintHorizontal_bias="0.216" app:layout_constraintVertical_bias="0.749"
             android:textSize="18sp" android:textColor="#000000"/>
     <TextView
             android:text="อาการแทรกซ้อน :"
@@ -244,7 +244,7 @@
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.106" app:layout_constraintVertical_bias="0.833"
+            app:layout_constraintHorizontal_bias="0.216" app:layout_constraintVertical_bias="0.884"
             android:textSize="18sp" android:textColor="#000000"/>
     <TextView
             android:text="อาการแทรกซ้อน :"
