--- a/app/src/main/res/layout/activity_notificate.xml
+++ b/app/src/main/res/layout/activity_notificate.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".NotificateActivity">
+        tools:context=".NotificateActivity"
+        android:background="@drawable/aa">
     <TextView
             android:text="ผู้ป่วยโรค :"
             android:layout_width="135dp"
@@ -275,8 +276,8 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.0" android:checked="true"/>
     <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp" app:srcCompat="@drawable/ss"
+            android:layout_width="49dp"
+            android:layout_height="42dp" app:srcCompat="@drawable/diskette"
             android:id="@+id/btn_save_notiiddd" app:layout_constraintStart_toEndOf="@+id/symtomppp_noti"
             android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/symtomppp_noti"
             app:layout_constraintTop_toTopOf="@+id/symtomppp_noti" app:layout_constraintEnd_toEndOf="parent"
