--- a/app/src/main/res/layout/activity_register_acc.xml
+++ b/app/src/main/res/layout/activity_register_acc.xml
@@ -66,64 +66,64 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.441"/>
     <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="292dp"
+            android:layout_height="46dp"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/name_regis" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.046"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.047"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintHorizontal_bias="0.56" android:hint="ชื่อ"/>
+            android:hint="ชื่อ" app:layout_constraintHorizontal_bias="0.446"/>
     <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="288dp"
+            android:layout_height="39dp"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/lastname_regis"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.56" android:hint="นามสกุล"
+            app:layout_constraintHorizontal_bias="0.495" android:hint="นามสกุล"
             app:layout_constraintTop_toBottomOf="@+id/name_regis" android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.015"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.027"
             android:layout_marginBottom="8dp"/>
     <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="285dp"
+            android:layout_height="46dp"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/bd_regis"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.007"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.003"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintHorizontal_bias="0.56" android:hint="วัน เดือน ปีเกิด"
+            android:hint="วัน เดือน ปีเกิด"
             app:layout_constraintTop_toBottomOf="@+id/lastname_regis"/>
     <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="284dp"
+            android:layout_height="48dp"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/address_regis"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.018"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.012"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            android:hint="ที่อยู่" app:layout_constraintHorizontal_bias="0.56"
+            android:hint="ที่อยู่" app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
     <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="285dp"
+            android:layout_height="44dp"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/mail_regis"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.041"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.046"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintHorizontal_bias="0.56" android:hint="อีเมล"
+            app:layout_constraintHorizontal_bias="0.49" android:hint="อีเมล"
             app:layout_constraintTop_toBottomOf="@+id/address_regis"/>
     <TextView
             android:text="เพศ"
@@ -136,8 +136,8 @@
             app:layout_constraintVertical_bias="0.016" android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/bd_regis"/>
     <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="293dp"
+            android:layout_height="40dp"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/pass_regis"
@@ -145,7 +145,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintVertical_bias="0.08" app:layout_constraintHorizontal_bias="0.56"
+            app:layout_constraintVertical_bias="0.101"
             android:hint="รหัสผ่าน" app:layout_constraintTop_toBottomOf="@+id/mail_regis"/>
     <TextView
             android:text="สมัครบัญชีผู้ใช้"
