--- a/app/src/main/res/layout/activity_detail_input_.xml
+++ b/app/src/main/res/layout/activity_detail_input_.xml
@@ -5,15 +5,17 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Detail_input">
+        tools:context=".New_input_Activity"
+        android:background="@drawable/p2">
 
     <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="395dp"
+            android:layout_height="715dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" android:layout_marginBottom="8dp">
+            android:layout_marginTop="8dp" android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="1.0">
         <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                            android:layout_height="wrap_content"
                                                            android:orientation="vertical"
@@ -36,8 +38,8 @@
                     android:rotation="0"
                     android:layout_marginBottom="3dp" app:layout_constraintEnd_toEndOf="@+id/img_p_upload2"/>
             <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="45dp"
+                    android:layout_width="259dp"
+                    android:layout_height="46dp"
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/name_patient2" android:layout_marginEnd="8dp"
@@ -48,7 +50,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/img_p_upload2"
                     app:layout_constraintVertical_bias="0.047" android:hint="ชื่อ" android:textColorHint="#9A9A9A"/>
             <EditText
-                    android:layout_width="200dp"
+                    android:layout_width="260dp"
                     android:layout_height="45dp"
                     android:inputType="textPersonName"
                     android:ems="10"
@@ -65,11 +67,11 @@
                     android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/lastname_patient2"
-                    app:layout_constraintVertical_bias="0.0" android:textSize="18sp" android:textAlignment="center"
+                    app:layout_constraintVertical_bias="0.011" android:textSize="18sp" android:textAlignment="center"
                     android:textColor="#FD070707" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView16" android:layout_marginStart="8dp"
-                    app:layout_constraintHorizontal_bias="0.468"/>
+                    app:layout_constraintHorizontal_bias="0.723"/>
             <TextView
                     android:text="เพศ"
                     android:layout_width="59dp"
@@ -78,16 +80,17 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/lastname_patient2" app:layout_constraintHorizontal_bias="0.339"
-                    app:layout_constraintVertical_bias="0.0" android:textSize="18sp"
+                    app:layout_constraintTop_toBottomOf="@+id/lastname_patient2"
+                    app:layout_constraintHorizontal_bias="0.221"
+                    app:layout_constraintVertical_bias="0.011" android:textSize="18sp"
                     android:textAlignment="center"
                     android:textColor="#FD070707"/>
             <RadioGroup
                     android:layout_width="116dp"
                     android:layout_height="67dp" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/age_patient5" app:layout_constraintHorizontal_bias="0.46"
-                    android:id="@+id/radioGroup77">
+                    app:layout_constraintTop_toBottomOf="@+id/age_patient5" app:layout_constraintHorizontal_bias="0.361"
+                    android:id="@+id/radioGroup77" android:layout_marginTop="4dp">
                 <RadioButton
                         android:text="ชาย"
                         android:layout_width="wrap_content"
@@ -98,8 +101,8 @@
                         android:layout_height="wrap_content" android:id="@+id/girlbutton" android:layout_weight="1"/>
             </RadioGroup>
             <EditText
-                    android:layout_width="40dp"
-                    android:layout_height="38dp"
+                    android:layout_width="55dp"
+                    android:layout_height="49dp"
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/age_patient"
@@ -107,11 +110,11 @@
                     android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toTopOf="@+id/address_patient2"
                     app:layout_constraintStart_toEndOf="@+id/textView16" android:layout_marginStart="8dp"
-                    app:layout_constraintHorizontal_bias="0.29" android:hint="อายุ" android:textColorHint="#9A9A9A"
+                    app:layout_constraintHorizontal_bias="0.452" android:hint="อายุ" android:textColorHint="#9A9A9A"
                     android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.85"/>
+                    app:layout_constraintVertical_bias="0.837"/>
             <EditText
-                    android:layout_width="200dp"
+                    android:layout_width="250dp"
                     android:layout_height="45dp"
                     android:inputType="textPersonName"
                     android:ems="10"
@@ -121,10 +124,10 @@
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toTopOf="@+id/bd_patient2" android:layout_marginTop="5dp"
-                    android:hint="ที่อยู่" app:layout_constraintHorizontal_bias="0.497"/>
+                    android:hint="ที่อยู่" app:layout_constraintHorizontal_bias="0.488"/>
             <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="45dp"
+                    android:layout_width="249dp"
+                    android:layout_height="44dp"
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/bd_patient2"
@@ -135,8 +138,8 @@
                     app:layout_constraintHorizontal_bias="0.497" android:layout_marginBottom="1dp"
                     app:layout_constraintBottom_toTopOf="@+id/namecare_patient2" android:layout_marginTop="8dp"/>
             <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="45dp"
+                    android:layout_width="247dp"
+                    android:layout_height="44dp"
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/namecare_patient2"
@@ -144,12 +147,12 @@
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:hint="ชื่อผู้ดูแล"
-                    app:layout_constraintHorizontal_bias="0.502" app:layout_constraintTop_toBottomOf="@+id/bd_patient2"
+                    app:layout_constraintTop_toBottomOf="@+id/bd_patient2"
                     android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toTopOf="@+id/telcare_patient2"/>
             <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="45dp"
+                    android:layout_width="240dp"
+                    android:layout_height="47dp"
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/telcare_patient2"
@@ -157,12 +160,12 @@
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:hint="หมายเลขโทรศัพท์ผู้ดูแล"
-                    app:layout_constraintHorizontal_bias="0.497"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/namecare_patient2"
+                    app:layout_constraintHorizontal_bias="0.482"
+                    android:layout_marginTop="3dp" app:layout_constraintTop_toBottomOf="@+id/namecare_patient2"
                     app:layout_constraintBottom_toTopOf="@+id/spinner" app:layout_constraintVertical_bias="1.0"/>
             <Spinner
-                    android:layout_width="190dp"
-                    android:layout_height="40dp"
+                    android:layout_width="244dp"
+                    android:layout_height="39dp"
                     android:id="@+id/spinner" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -179,21 +182,20 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/spinner"
-                    android:layout_marginTop="3dp" android:layout_marginBottom="5dp"
-                    app:layout_constraintBottom_toTopOf="@+id/detail_input_DB" android:spinnerMode="dialog"
+                    android:layout_marginTop="8dp"
+                    android:spinnerMode="dialog"
                     android:textAlignment="center"/>
-            <TextView
-                    android:text="ประเมินภาวะผู้ป่วย"
-                    android:layout_width="200dp"
-                    android:layout_height="40dp"
-                    android:id="@+id/detail_input_DB"
-                    app:layout_constraintStart_toStartOf="parent"
+            <Button
+                    android:text="ประเมินสภาวะ"
+                    android:layout_width="199dp"
+                    android:layout_height="38dp"
+                    android:id="@+id/detail_input_DB" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/spinner2" android:textSize="18sp"
-                    android:layout_marginTop="8dp" android:textAlignment="center"
-                    android:textColor="#020202"
-            />
+                    app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/spinner2"
+                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+                    android:background="@drawable/but6"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
