--- a/app/src/main/res/layout/activity_edit__old__patient.xml
+++ b/app/src/main/res/layout/activity_edit__old__patient.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Edit_Old_Patient">
+        tools:context=".Edit_Old_Patient"
+        android:background="@drawable/p2">
 
 
     <ScrollView
@@ -14,7 +15,7 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" android:layout_marginBottom="8dp">
+            android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:id="@+id/scrollView3">
         <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                            android:layout_height="wrap_content"
                                                            android:orientation="vertical"
@@ -37,8 +38,8 @@
                     android:rotation="0"
                     android:layout_marginBottom="3dp" app:layout_constraintEnd_toEndOf="@+id/img_p_upload2"/>
             <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="45dp"
+                    android:layout_width="227dp"
+                    android:layout_height="47dp"
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/name_patient2" android:layout_marginEnd="8dp"
@@ -49,14 +50,14 @@
                     app:layout_constraintTop_toBottomOf="@+id/img_p_upload2"
                     app:layout_constraintVertical_bias="0.047" android:hint="ชื่อ" android:textColorHint="#9A9A9A"/>
             <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="45dp"
+                    android:layout_width="221dp"
+                    android:layout_height="48dp"
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/lastname_patient2"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.53"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.509"
                     app:layout_constraintTop_toBottomOf="@+id/name_patient2" app:layout_constraintVertical_bias="0.0"
                     android:layout_marginTop="8dp" android:hint="นามสกุล" android:textColorHint="#9A9A9A"/>
             <TextView
@@ -66,11 +67,11 @@
                     android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/lastname_patient2"
-                    app:layout_constraintVertical_bias="0.0" android:textSize="18sp" android:textAlignment="center"
+                    app:layout_constraintVertical_bias="0.047" android:textSize="18sp" android:textAlignment="center"
                     android:textColor="#FD070707" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView16" android:layout_marginStart="8dp"
-                    app:layout_constraintHorizontal_bias="0.468"/>
+                    app:layout_constraintHorizontal_bias="0.582"/>
             <TextView
                     android:text="เพศ"
                     android:layout_width="59dp"
@@ -79,16 +80,17 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/lastname_patient2" app:layout_constraintHorizontal_bias="0.339"
-                    app:layout_constraintVertical_bias="0.0" android:textSize="18sp"
+                    app:layout_constraintTop_toBottomOf="@+id/lastname_patient2"
+                    app:layout_constraintHorizontal_bias="0.246"
+                    app:layout_constraintVertical_bias="0.043" android:textSize="18sp"
                     android:textAlignment="center"
                     android:textColor="#FD070707"/>
             <RadioGroup
                     android:layout_width="116dp"
                     android:layout_height="67dp" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/age_patient5" app:layout_constraintHorizontal_bias="0.46"
-                    android:id="@+id/radioGroup77">
+                    app:layout_constraintTop_toBottomOf="@+id/age_patient5" app:layout_constraintHorizontal_bias="0.398"
+                    android:id="@+id/radioGroup77" android:layout_marginTop="4dp">
                 <RadioButton
                         android:text="ชาย"
                         android:layout_width="wrap_content"
@@ -106,14 +108,14 @@
                     android:id="@+id/age_patient"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/address_patient2"
+                    app:layout_constraintBottom_toTopOf="@+id/radioGroup77"
                     app:layout_constraintStart_toEndOf="@+id/textView16" android:layout_marginStart="8dp"
-                    app:layout_constraintHorizontal_bias="0.29" android:hint="อายุ" android:textColorHint="#9A9A9A"
+                    app:layout_constraintHorizontal_bias="0.328" android:hint="อายุ" android:textColorHint="#9A9A9A"
                     android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.85"/>
+                    app:layout_constraintVertical_bias="1.0"/>
             <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="45dp"
+                    android:layout_width="209dp"
+                    android:layout_height="43dp"
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/address_patient2"
@@ -122,10 +124,10 @@
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toTopOf="@+id/bd_patient2" android:layout_marginTop="5dp"
-                    android:hint="ที่อยู่" app:layout_constraintHorizontal_bias="0.497"/>
+                    android:hint="ที่อยู่" app:layout_constraintHorizontal_bias="0.452"/>
             <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="45dp"
+                    android:layout_width="213dp"
+                    android:layout_height="41dp"
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/bd_patient2"
@@ -133,11 +135,11 @@
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:hint="วันเดือนปีเกิด"
-                    app:layout_constraintHorizontal_bias="0.497" android:layout_marginBottom="1dp"
+                    app:layout_constraintHorizontal_bias="0.463" android:layout_marginBottom="1dp"
                     app:layout_constraintBottom_toTopOf="@+id/namecare_patient2" android:layout_marginTop="8dp"/>
             <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="45dp"
+                    android:layout_width="212dp"
+                    android:layout_height="53dp"
                     android:inputType="textPersonName"
                     android:ems="10"
                     android:id="@+id/namecare_patient2"
@@ -145,11 +147,11 @@
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:hint="ชื่อผู้ดูแล"
-                    app:layout_constraintHorizontal_bias="0.502" app:layout_constraintTop_toBottomOf="@+id/bd_patient2"
+                    app:layout_constraintHorizontal_bias="0.485" app:layout_constraintTop_toBottomOf="@+id/bd_patient2"
                     android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toTopOf="@+id/telcare_patient2"/>
             <EditText
-                    android:layout_width="200dp"
+                    android:layout_width="209dp"
                     android:layout_height="45dp"
                     android:inputType="textPersonName"
                     android:ems="10"
@@ -160,22 +162,17 @@
                     android:hint="หมายเลขโทรศัพท์ผู้ดูแล"
                     app:layout_constraintHorizontal_bias="0.497"
                     app:layout_constraintTop_toBottomOf="@+id/namecare_patient2"
-                    app:layout_constraintBottom_toTopOf="@+id/detail_input_DB" android:layout_marginBottom="8dp"/>
-            <TextView
-                    android:text="บันทึก"
-                    android:layout_width="200dp"
-                    android:layout_height="40dp"
-                    android:id="@+id/detail_input_DB"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    android:textSize="18sp"
-                    android:textAlignment="center"
-                    android:textColor="#020202"
-                    app:layout_constraintHorizontal_bias="0.497"
-                    app:layout_constraintTop_toBottomOf="@+id/telcare_patient2"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="8dp"/>
+            />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+    <Button
+            android:text="บันทึก"
+            android:layout_width="99dp"
+            android:layout_height="53dp"
+            android:id="@+id/detail_input_DB" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.452"
+            app:layout_constraintVertical_bias="1.0" android:background="@drawable/but9"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
