--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,16 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.147"/>
+            app:layout_constraintVertical_bias="0.159"/>
     <ImageView
             android:layout_width="335dp"
             android:layout_height="68dp" app:srcCompat="@drawable/but2" android:id="@+id/imageView3"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.66" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.797" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.441"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent"/>
     <ImageView
             android:layout_width="335dp"
             android:layout_height="68dp" app:srcCompat="@drawable/but" android:id="@+id/imageView8"
@@ -40,48 +41,49 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.441"/>
     <EditText
-            android:layout_width="270dp"
-            android:layout_height="60dp"
+            android:layout_width="304dp"
+            android:layout_height="46dp"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/mail_login" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+            android:id="@+id/mail_login" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp" android:layout_marginStart="8dp"
-            android:hint="E-mail" app:layout_constraintHorizontal_bias="0.504"
-            app:layout_constraintVertical_bias="0.412"/>
+            android:hint="E-mail"
+            app:layout_constraintVertical_bias="0.417" app:layout_constraintHorizontal_bias="0.494"/>
     <EditText
-            android:layout_width="270dp"
-            android:layout_height="60dp"
+            android:layout_width="312dp"
+            android:layout_height="46dp"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/pass_login"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.012"
-            android:hint="Password" app:layout_constraintTop_toBottomOf="@+id/mail_login"
-            app:layout_constraintHorizontal_bias="0.496"/>
+            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.526"
+            android:hint="Password"
+            app:layout_constraintHorizontal_bias="0.481" app:layout_constraintTop_toTopOf="parent"/>
     <TextView
             android:text="LOGIN"
             android:layout_width="214dp"
-            android:layout_height="56dp" android:id="@+id/login_btn" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="80dp"
+            android:layout_height="56dp" android:id="@+id/login_btn"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="80dp" android:layout_marginTop="80dp" android:layout_marginStart="80dp"
-            android:textSize="28sp" android:textAlignment="center" app:layout_constraintHorizontal_bias="0.486"
-            app:layout_constraintVertical_bias="0.891" android:textColor="#1F1D1D"/>
+            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" android:layout_marginStart="8dp"
+            android:textSize="28sp" android:textAlignment="center" app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintVertical_bias="0.801" android:textColor="#1F1D1D"
+            app:layout_constraintTop_toTopOf="parent"/>
     <TextView
             android:text="ยังไม่มีบัญชีผู้ใช้?  ลงทะเบียน"
-            android:autoSizeTextType="uniform"
             android:layout_width="294dp"
-
-            android:layout_height="50dp" android:id="@+id/register" android:layout_marginBottom="80dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="80dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="80dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="80dp" app:layout_constraintVertical_bias="0.666" android:textSize="14sp"
-            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.511"
-            android:textColorHint="#000A0A0A" android:textColor="#B5303131"/>
+            android:layout_height="50dp" android:id="@+id/register" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.627" android:textSize="14sp"
+            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.445"
+            android:textColorHint="#000A0A0A" android:textColor="#B5303131"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
