--- a/app/src/main/res/layout/activity_main_menu_for_new.xml
+++ b/app/src/main/res/layout/activity_main_menu_for_new.xml
@@ -22,5 +22,6 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.314"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.314"
+            android:background="@drawable/but8"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
