--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,18 +70,19 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="80dp" android:layout_marginTop="80dp" android:layout_marginStart="80dp"
             android:textSize="28sp" android:textAlignment="center" app:layout_constraintHorizontal_bias="0.486"
-            app:layout_constraintVertical_bias="0.891" android:textColor="#1F1D1D"/>
+            app:layout_constraintVertical_bias="0.89" android:textColor="#1F1D1D"/>
     <TextView
             android:text="ยังไม่มีบัญชีผู้ใช้?  ลงทะเบียน"
             android:autoSizeTextType="uniform"
             android:layout_width="294dp"
 
             android:layout_height="50dp" android:id="@+id/register" android:layout_marginBottom="80dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="80dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="80dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="80dp" app:layout_constraintVertical_bias="0.666" android:textSize="14sp"
-            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.511"
-            android:textColorHint="#000A0A0A" android:textColor="#B5303131"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="@+id/pass_login"
+            android:layout_marginEnd="80dp" app:layout_constraintStart_toStartOf="@+id/pass_login"
+            app:layout_constraintVertical_bias="0.060000002" android:textSize="14sp"
+            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.15"
+            android:textColorHint="#000A0A0A" android:textColor="#B5303131"
+            app:layout_constraintTop_toBottomOf="@+id/pass_login"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
